Bouncing ball (debug)